# markdown-to-html

./: .gitignore  AGENTS.md  ANIMATION_TOOL_DESIGN.md  DAISYUI_MIGRATION_REPORT.md  LICENSE  NEXTSTEPS.md  NOTES.md  README.md  bench.py  bench2.py  bench3.py  bench4.py  bench5.py  benchmark.py  check_parsers.py  config.py  config.toml  constants.py  converter.py  css_investigation_report.md  debug.py  debug2.py  debug3.py  debug4.py  debug5.py  debug6.py  empty.html  fill_tests.py  fix_all_paths.py  fix_base.py  fix_css8.py  fix_parsers_again.py  fix_path.py  fix_tests.py  fix_textfield.py  generate_missing_tests.py  generate_tests.py  logger.py  main.py  output.html  (+23 more)
.jules/: bolt.md
.zed/: tasks.json
demo/: ab-test.md  account.md  badge.md  clock.md  countdown.md  dice.md  drawer.md  extensions.md  flip.md  flow.md  group-assignment.md  hero.md  icon.md  image.md  layout.md  notebook.md  output.html  poll.md  reaction.md  score.md  section.md  session-join.md  showcase.html  showcase.md  simple.md  sound.md  spacer.md  test_components.html  test_components.md  test_image.html  test_image.md  test_missing.html  test_missing.md  test_svg.html  test_svg.md  test_svg_inline.html  test_svg_inline.md  test_svg_xml_inline.html  test_svg_xml_inline.md  test_textfiled.md  (+2 more)
doc/: ANIMATION_TOOL_DESIGN.md  ARCHITECTURE.md  COMPONENTS.md  COMPONENT_CSS_SPEC.md  DESKTOP_APP_DESIGN.md  EDITOR_SETUP.md  EXTERNAL_TOOLS_RESEARCH.md  NOTES.md  README.md  SERVER_COMPONENTS_MANUAL.md  SPEC.md  codeblock_investigation.md  design_md_investigation.md  layout_guide.md  (+1 more)
embedders/: css.py  (+2 more)
(+295 files in other folders)
