[project]
name = "markdown-to-html"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.135.3",
    "markdown>=3.10.2",
    "pillow>=12.2.0",
    "pytest>=9.0.3",
    "requests>=2.33.1",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
]
